Added comments and tags

--- a/_posts/2018-11-15-comments.md
+++ b/_posts/2018-11-15-comments.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: 2 comment |! to comment?
-categories: Senior_Seminar
+tags: ["Senior Seminar","Software Engineering"]
+comments: true
 ---
 
 When I started to program, I was taught to be verbose with both variable names and comments explaining the code. We had stylistic and readability points assigned on each assignment to enhance the way the students coded. I loved to produce code that was heavily commented and explained every tiny detail, and everything was great until I came across this series of talks : [Software flaws](https://www.youtube.com/playlist?list=PLOU2XLYxmsIJ7HGm2bv20QrtwcWemSRCI). The series raises of thought-provoking ideas. There views on commenting interested me the most. The developers discuss the concept of using verbose variable names to adequately describe their purpose eliminating the need of comments that are not part of the documentation (they are not arguing against things like method comments in Java that produce Java Doc). Given that this was very different to what I had learned, I searched online to see what other people thought.
