--- a/_posts/2019-01-31-ethics.md
+++ b/_posts/2019-01-31-ethics.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: Ethics in a World Filled with Dilemmas
-categories: Senior_Seminar
+tags: ["Senior Seminar","Ethics"]
+comments: true
 ---
 
 Today, I want to write about Ethics and share some of the things I have been thinking about since we discussed ethics in one of my classes. We studied various ethical frameworks, but the frameworks I want to contrast are [Act relativism](https://en.wikipedia.org/wiki/Relativism) and [kantinism](https://en.wikipedia.org/wiki/Kantianism).
