Added excerpts to old blog posts

--- a/_posts/2019-02-28-IoT.md
+++ b/_posts/2019-02-28-IoT.md
@@ -2,6 +2,7 @@
 layout: post
 title: Mirai Botnet and the ethical responsibility of IoT manufacturers
 tags: ["Senior Seminar","IoT"]
+excerpt: "How default passwords and low power devices took down technological titans"
 comments: true
 ---
 
