--- a/_posts/2018-11-15-comments.md
+++ b/_posts/2018-11-15-comments.md
@@ -2,6 +2,7 @@
 layout: post
 title: 2 comment |! to comment?
 tags: ["Senior Seminar","Software Engineering"]
+excerpt: "Can comments in code be harmful and when comments actually lead to bad coding practices"
 comments: true
 ---
 
