Removed period from excerpts

--- a/_posts/2019-01-31-ethics.md
+++ b/_posts/2019-01-31-ethics.md
@@ -2,7 +2,7 @@
 layout: post
 title: Ethics in a World Filled with Dilemmas
 tags: ["Senior Seminar","Ethics"]
-excerpt: "My take on ethics and why is it not always black and white."
+excerpt: "My take on ethics and why is it not always black and white"
 comments: true
 ---
 
