--- a/_posts/2019-02-28-IoT.md
+++ b/_posts/2019-02-28-IoT.md
@@ -3,9 +3,10 @@ layout: post
 title: Mirai Botnet and the ethical responsibility of IoT manufacturers
 excerpt: "How default passwords and low power devices took down technological titans"
 tags: ["Senior Seminar","IoT"]
+feature: assets/img/post_features/internet of things.jpg
 comments: true
 ---
-
+*Photo by Louis Reed on Unsplash*
 The Mirai botnet devastated the internet in 2016 when it attacked Dyn and took down a massive number of services. It was a malware that had a huge impact, but it was based on a simple idea: exploiting default passwords of IoT devices. This attack shows a new problem that will arise with IoT. Given the cheap cost of manufacturing these devices and the nature of their use, they are often mass produced. Mass production and pressure of making them competitive lead to short development cycles which can lead to security loopholes.
 
 Loopholes can be of two kinds: software or hardware. While software vulnerabilities can be damaging, the good things about them are that they can often be patched while fixing a hardware vulnerability is much more complicated. It is usually not feasible to recall hardware devices that cost so little to produce and replacing them might not always be an option. This is further complicated by the fact that IoT is a growing field that does not have standardized protocols and software suites which means that research and development are divided and thus vulnerabilities are found at a much slower rate.
